--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta content="" name="description">
 
   <meta content="" name="keywords">
+  <meta name="facebook-domain-verification" content="m43kmxfqah2gy0zu4f2hr1xd5izbyz" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
